# MLCompilerBridge

./: CMakeLists.txt  annotated.html  dir_000010_000006.html  dir_000011_000005.html  dir_5e04fca4119741a0bf494ce528aff5e5.html  dir_5e04fca4119741a0bf494ce528aff5e5_dep.map  dir_5e04fca4119741a0bf494ce528aff5e5_dep.md5  dir_707325d80dc15f36465b8085fe0b899a.html  dir_707325d80dc15f36465b8085fe0b899a_dep.map  dir_707325d80dc15f36465b8085fe0b899a_dep.md5  dir_979cc5dec6fb80aa623638901cee0f6f.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  doxygen_crawl.html  files.html  functions_b.html  functions_enum.html  functions_func.html  functions_g.html  functions_k.html  functions_n.html  functions_p.html  functions_s.html  functions_t.html  functions_vars.html  globals.html  hierarchy.html  index.html  inherit_graph_6.map  inherit_graph_6.md5  inherits.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html
.github/workflows/: build.yml  mlbridge_build.sh
MLModelRunner/: CMakeLists.txt  MLModelRunner.cpp  PTModelRunner.cpp
MLModelRunner/C/: CMakeLists.txt
MLModelRunner/ONNXModelRunner/: CMakeLists.txt  agent.cpp
MLModelRunner/PTModelRunner/: CMakeLists.txt  PTModelRunner.cpp
MLModelRunner/Utils/: CMakeLists.txt
MLModelRunner/gRPCModelRunner/: CMakeLists.txt
SerDes/: CMakeLists.txt  protobufSerDes.cpp  pytorchSerDes.cpp
SerDes/pytorchSerDes/: CMakeLists.txt  pytorchSerDes.cpp
d0/d26/: classMLBridge_1_1BaseSerDes-members.html
d0/d60/: classMLBridge_1_1JsonSerDes-members.html
d0/d9d/: bitstreamSerDes_8h__incl.map  bitstreamSerDes_8h__incl.md5
d1/dcd/: classMLBridge_1_1ProtobufSerDes.html
d1/ddf/: classMLBridge_1_1ProtobufSerDes__inherit__graph.md5
d1/de8/: protobufSerDes_8h_source.html
d2/d12/: DataTypes_8h_source.html
d2/d15/: baseSerDes_8h.html  baseSerDes_8h_source.html
d2/d87/: classMLBridge_1_1TensorSpec.html
d2/dd2/: jsonSerDes_8h.html  jsonSerDes_8h_source.html
d3/d15/: tensorflowSerDes_8cpp_source.html
d3/d5c/: PipeModelRunnerCWrapper_8cpp_source.html
d3/d6a/: protobufSerDes_8cpp_source.html
d3/d92/: PipeModelRunner_8cpp__incl.map  PipeModelRunner_8cpp__incl.md5
d3/dbc/: classMLBridge_1_1TFModelRunner-members.html
d3/ddd/: jsonSerDes_8h__incl.map  jsonSerDes_8h__incl.md5
d4/d4a/: classMLBridge_1_1gRPCModelRunner.html
d4/d63/: ONNXModelRunner_8cpp_source.html
d4/d7b/: gRPCModelRunner_8h.html  gRPCModelRunner_8h_source.html
d4/deb/: Debug_8h_source.html
d5/d26/: gRPCModelRunner_8h__incl.map  gRPCModelRunner_8h__incl.md5
d5/d60/: utils_8h_source.html
d5/d9c/: namespaceMLBridge.html
d5/dd7/: classMLBridge_1_1ONNXModelRunner.html
d5/de3/: classMLBridge_1_1ProtobufSerDes__coll__graph.map
d6/d32/: bitstreamSerDes_8h.html  bitstreamSerDes_8h_source.html
d6/db1/: PipeModelRunner_8h__incl.map  PipeModelRunner_8h__incl.md5
d6/db3/: classMLBridge_1_1TensorflowSerDes-members.html
d7/d34/: ONNXModelRunner_2ONNXModelRunner_8h_source.html
d7/d4c/: TensorSpec_8cpp__incl.map  TensorSpec_8cpp__incl.md5
d7/db9/: jsonSerDes_8cpp.html  jsonSerDes_8cpp_source.html
d8/d02/: TFModelRunner_8h.html  TFModelRunner_8h_source.html
d8/d70/: MLConfig_8h_source.html
d8/de9/: TensorSpec_8h__incl.map  TensorSpec_8h__incl.md5
d9/d1d/: MLModelRunner_8h__incl.map  (+1 more)
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_7.js  functions_11.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_d.js  functions_e.js  searchdata.js  variables_10.js  variables_11.js  variables_12.js  variables_5.js  variables_9.js  variables_d.js  variables_f.js
test/: CMakeLists.txt  MLBridgeTest.cpp
(+52 files in other folders)
